Fix navbar dropdown on mobile

--- a/app/assets/stylesheets/partials/_navigation.scss
+++ b/app/assets/stylesheets/partials/_navigation.scss
@@ -7,28 +7,6 @@
   margin-right: 0;
 }
 
-.navbar ul {
-  .dropdown {
-    line-height: $navbar-height;
-
-    &-toggle {
-      background-color: transparent !important;
-    }
-
-    &-menu {
-      border-radius: 0 0 3px 3px;
-      border: 0;
-      border-top: 2px solid hsl(280, 57%, 48%);
-      box-shadow: 0 1px 1px 1px rgba(0,0,0,.09);
-      margin-top: -18px;
-
-      a:hover {
-        background: #eee;
-      }
-    }
-  }
-}
-
 .navbar-default {
   .navbar-brand {
     color: $color-purple;
@@ -97,4 +75,25 @@
   justify-content: center;
   margin-top: -4px;
   width: 32px;
+}
+
+.navbar ul {
+  .dropdown {
+    line-height: $navbar-height;
+
+    &-toggle {
+      background-color: transparent !important;
+    }
+
+    &-menu {
+      border-radius: 0 0 3px 3px;
+      border: 0;
+      border-top: 2px solid hsl(280, 57%, 48%);
+      box-shadow: 0 1px 1px 1px rgba(0,0,0,.09);
+      margin-top: -18px;
+
+
+      a:hover { background: #eee; }
+    }
+  }
 }
